feat: implement MBTI scoring logic and finalize production API wiring
Backend:
- Implemented dynamic MBTI scoring algorithm in AssessmentService
- Fixed compilation errors in UserService and UserController (UUID casting)
- Added new AdminAssessmentController and TestResultController
- Included DataSeeder and Firebase configuration
- Updated entity structures and DTOs for assessments

Frontend:
- Centralized API requests using apiClient
- Implemented assessmentService, authService, and adminService
- Added dynamic test pages and auth protected routes
- Updated build configuration (vite.config.ts)

Infra & Docs:
- Added production Docker configs (application-docker.yml)
- Included production readiness and senior audit reports